--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.4.0",
     "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
