# init admin dashboard modification

--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/cli": "^4.1.13",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "googleapis": "^159.0.0",
     "jose": "^6.1.0",
@@ -29,6 +33,8 @@
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-rtl": "^0.9.0"
   }
 }
