--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/cli": "^4.1.13",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "googleapis": "^159.0.0",
